force-app/main/default/objects/Patent__c/Patent__c.object-meta.xml
<CustomObject>
    <label>Patent</label>
    <nameField>
        <label>Patent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>