force-app/main/default/objects/Patent__c/fields/Country_Global__c.field-meta.xml
<CustomField>
    <fullName>Country_Global__c</fullName>
    <label>Country [GLOBAL]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>