force-app/main/default/objects/Patent__c/fields/Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Filed_Date__c</fullName>
    <label>Filed Date</label>
    <type>Date</type>
</CustomField>