force-app/main/default/objects/Patent__c/fields/FILED_DATE_YEAR__c.field-meta.xml
<CustomField>
    <fullName>FILED_DATE_YEAR__c</fullName>
    <formula>TEXT(YEAR(Filed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filed Year</label>
    <type>Text</type>
</CustomField>