force-app/main/default/objects/Patent__c/fields/granted_year__c.field-meta.xml
<CustomField>
    <fullName>granted_year__c</fullName>
    <formula>TEXT(YEAR(Grant_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Year</label>
    <type>Text</type>
</CustomField>