force-app/main/default/objects/Patent__c/fields/Inventor_s__c.field-meta.xml
<CustomField>
    <fullName>Inventor_s__c</fullName>
    <label>Inventor(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adam Castoreno</fullName>
            </value>
            <value>
                <fullName>Adam Locke</fullName>
            </value>
            <value>
                <fullName>Alan Shuldiner</fullName>
            </value>
            <value>
                <fullName>Alexander Li</fullName>
            </value>
            <value>
                <fullName>Amy Damask</fullName>
            </value>
            <value>
                <fullName>Ann J. Ligocki</fullName>
            </value>
            <value>
                <fullName>Anthony Marcketta</fullName>
            </value>
            <value>
                <fullName>Arden Moscati</fullName>
            </value>
            <value>
                <fullName>Aris I Baras</fullName>
            </value>
            <value>
                <fullName>Aristides N. Economides</fullName>
            </value>
            <value>
                <fullName>Ashish Yadav</fullName>
            </value>
            <value>
                <fullName>Bhaumik Pandya</fullName>
            </value>
            <value>
                <fullName>Biming Wu</fullName>
            </value>
            <value>
                <fullName>Blair Zhang</fullName>
            </value>
            <value>
                <fullName>Brent Richards</fullName>
            </value>
            <value>
                <fullName>Bret Lee Bostwick</fullName>
            </value>
            <value>
                <fullName>Brian Cajes</fullName>
            </value>
            <value>
                <fullName>Carmelo Romano</fullName>
            </value>
            <value>
                <fullName>Charles Paulding</fullName>
            </value>
            <value>
                <fullName>Chia-Jen Siao</fullName>
            </value>
            <value>
                <fullName>Christian Benner</fullName>
            </value>
            <value>
                <fullName>Christopher Snyder</fullName>
            </value>
            <value>
                <fullName>Christy Tise</fullName>
            </value>
            <value>
                <fullName>Claudia Gonzaga-Jauregui</fullName>
            </value>
            <value>
                <fullName>Claudia Schurmann</fullName>
            </value>
            <value>
                <fullName>Colm O&apos;Dushlaine</fullName>
            </value>
            <value>
                <fullName>Cristopher Van Hout</fullName>
            </value>
            <value>
                <fullName>Danish Saleheen</fullName>
            </value>
            <value>
                <fullName>David J. Glass</fullName>
            </value>
            <value>
                <fullName>Da-Wei Gong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>