force-app/main/default/objects/Patent__c/fields/National_Actual_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>National_Actual_Filed_Date__c</fullName>
    <label>National/Actual Filed Date</label>
    <type>Date</type>
</CustomField>