force-app/main/default/objects/Patent__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alnylam Pharmaceuticals, Inc.</fullName>
            </value>
            <value>
                <fullName>Alnylam/Regeneron</fullName>
            </value>
            <value>
                <fullName>Regeneron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>