force-app/main/default/objects/Patent__c/fields/Patent_Application_Title__c.field-meta.xml
<CustomField>
    <fullName>Patent_Application_Title__c</fullName>
    <label>Patent Application Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>