force-app/main/default/objects/Patent__c/fields/Patent_No__c.field-meta.xml
<CustomField>
    <fullName>Patent_No__c</fullName>
    <label>Patent No.</label>
    <length>32</length>
    <type>Text</type>
</CustomField>