force-app/main/default/objects/Patent__c/fields/Publication_Number__c.field-meta.xml
<CustomField>
    <fullName>Publication_Number__c</fullName>
    <label>Publication Number</label>
    <length>21</length>
    <type>Text</type>
</CustomField>