force-app/main/default/objects/Patent__c/fields/Responsible_Manager__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Manager__c</fullName>
    <label>Responsible Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brian Cocca</fullName>
            </value>
            <value>
                <fullName>Eileen Woo</fullName>
            </value>
            <value>
                <fullName>Yonghao Hou</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>