force-app/main/default/objects/Patent__c/fields/TAG__c.field-meta.xml
<CustomField>
    <fullName>TAG__c</fullName>
    <label>TAG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>CVD/Fibrosis</fullName>
            </value>
            <value>
                <fullName>Immune, Resp, ID, I/O</fullName>
            </value>
            <value>
                <fullName>Muscle &amp; Metabolism</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Skeletal Disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>