force-app/main/default/objects/Patent__c/fields/True_Priority_Date__c.field-meta.xml
<CustomField>
    <fullName>True_Priority_Date__c</fullName>
    <label>True Priority Date</label>
    <type>Date</type>
</CustomField>