force-app/main/default/objects/Patent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patent_Application_Title__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <columns>Application_Number__c</columns>
    <columns>True_Priority_Date__c</columns>
    <columns>Filed_Date__c</columns>
    <columns>National_Actual_Filed_Date__c</columns>
    <columns>Publication_Number__c</columns>
    <columns>Publication_Date__c</columns>
    <columns>Patent_No__c</columns>
    <columns>Grant_Date__c</columns>
    <columns>Responsible_Manager__c</columns>
    <columns>Owner__c</columns>
    <columns>TAG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>